# climate-network-analysis

./: README.md  pyproject.toml
plots/: climate_crisis.csv  greta.csv
src/: main.py  others.py  projection.py
src/RQ/: 1most_polarized.ipynb  1most_polarized_topics.py  2longitudinal.ipynb  2longitudinal.py  3multi_layer_users.py  3multilayer_user.ipynb  4experts.ipynb  common.py  utils.py
src/RQ/scripts/: 1most_polarized_topics.py  3multi_layer_users.py  4experts.py
src/analysis/: basic.py  google_greta.py  ideology.py  understand_latent_ideology.py
