[tool.poetry]
name = "climate-network-analysis"
version = "0.1.0"
description = ""
authors = ["alessiogandelli <alessiogandelli99@gmail.com>"]
readme = "README.md"
packages = [{include = "climate_network_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
networkx = "^3.1"
seaborn = "^0.12.2"
latent-ideology = "^0.0.8.2"
diptest = "^0.5.2"
python-louvain = "^0.16"
uunet = "1.1.4"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
mpmath = "1.3.0"
nest-asyncio = "1.5.6"
numba = "0.56.4"
numpy = "1.23.5"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
